--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="grid layout-dashboard">
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-1">
+        <div class="grid grid-nogutter widget-overview-box overview-box-1hidrogeno" >
             <div class="col-3 overview-box-icon">
                 <img src="assets/layout/images/dashboard/icon-messages.svg" alt="mirage-layout" />
             </div>
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-3">
+        <div class="grid grid-nogutter widget-overview-box overview-box-2hidrogeno">
             <div class="col-3 overview-box-icon">
                 <img src="assets/layout/images/dashboard/icon-checkins.svg" alt="mirage-layout" />
             </div>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-3">
+        <div class="grid grid-nogutter widget-overview-box overview-box-3hidrogeno">
             <div class="col-3 overview-box-icon">
                 <img src="assets/layout/images/dashboard/icon-filessynced.svg" alt="mirage-layout" />
             </div>
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-1">
+        <div class="grid grid-nogutter widget-overview-box overview-box-4hidrogeno">
             <div class="col-3 overview-box-icon">
                 <img src="assets/layout/images/dashboard/icon-usersonline.png" alt="mirage-layout" />
             </div>
