--- a/src/assets/layout/css/blue/layout-light.css
+++ b/src/assets/layout/css/blue/layout-light.css
@@ -7945,7 +7945,8 @@ a {
   background-size: cover;
   position: absolute;
   bottom: 0;
-  background-image: url("../../images/pages/asset-desert.svg");
+  /* background-image: url("../../images/pages/asset-desert.svg"); */
+  background-image: url("../../images/pages/asset-desert-hidrogeno.svg");
 }
 .login-body.layout-light {
   background-color: #eceff4;
