--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -920,4 +920,133 @@
         <!-- Profile Settings End -->
     </main>
 </div>
+
+        <!-- Modal 1 :: Start a Conversation-->
+        <div class="modal modal-lg-fullscreen fade" id="startConversation" tabindex="-1" role="dialog" aria-labelledby="startConversationLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-dialog-zoom">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="startConversationLabel">New Chat</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body p-0 hide-scrollbar">
+                    <div class="row">
+                        <div class="col-12">
+                            <!-- Search Start -->
+                            <form class="form-inline w-100 p-2 border-bottom">
+                                <div class="input-group w-100 bg-light">
+                                    <input type="text" class="form-control form-control-md search border-right-0 transparent-bg pr-0" placeholder="Search">
+                                    <div class="input-group-append">
+                                        <div class="input-group-text transparent-bg border-left-0" role="button">
+                                            <!-- Default :: Inline SVG -->
+                                            <svg class="hw-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+                                            </svg>   
+                                            
+                                            <!-- Alternate :: External File link -->
+                                            <!-- <img class="injectable hw-20" src="./assets/media/heroicons/outline/search.svg" alt=""> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                            <!-- Search End -->
+                        </div>
+
+                        <div class="col-12">
+                                <!-- List Group Start -->
+                                <ul class="list-group list-group-flush">
+
+                                <!-- List Group Item Start -->
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="avatar avatar-online mr-2">
+                                            <img src="./assets/media/avatar/1.png" alt="">
+                                        </div>
+
+                                        <div class="media-body">
+                                            <h6 class="text-truncate">
+                                                <a href="#" class="text-reset">Catherine Richardson</a>
+                                            </h6>
+
+                                            <p class="text-muted mb-0">Online</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <!-- List Group Item End -->
+
+                                <!-- List Group Item Start -->
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="avatar avatar-online mr-2">
+                                            <img src="./assets/media/avatar/2.png" alt="">
+                                        </div>
+
+                                        <div class="media-body">
+                                            <h6 class="text-truncate">
+                                                <a href="#" class="text-reset">Katherine Schneider</a>
+                                            </h6>
+
+                                            <p class="text-muted mb-0">Online</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <!-- List Group Item End -->
+
+                                <!-- List Group Item Start -->
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="avatar avatar-offline mr-2">
+                                            <img src="./assets/media/avatar/3.png" alt="">
+                                        </div>
+
+                                        <div class="media-body">
+                                            <h6 class="text-truncate">
+                                                <a href="#" class="text-reset">Brittany K. Williams</a>
+                                            </h6>
+
+                                            <p class="text-muted mb-0">Offline</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <!-- List Group Item End -->
+
+                                <!-- List Group Item Start -->
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="avatar avatar-busy mr-2">
+                                            <img src="./assets/media/avatar/4.png" alt="">
+                                        </div>
+                                        <div class="media-body">
+                                            <h6 class="text-truncate"><a href="#" class="text-reset">Christina Turner</a></h6>
+                                            <p class="text-muted mb-0">Busy</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <!-- List Group Item End -->
+
+                                <!-- List Group Item Start -->
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="avatar avatar-away mr-2">
+                                            <img src="./assets/media/avatar/5.png" alt="">
+                                        </div>
+
+                                        <div class="media-body">
+                                            <h6 class="text-truncate"><a href="#" class="text-reset">Annie Richardson</a></h6>
+                                            <p class="text-muted mb-0">Away</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <!-- List Group Item End -->
+
+                            </ul>
+                            <!-- List Group End -->
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
 <!-- Main End -->
