--- a/src/app/app.main.component.html
+++ b/src/app/app.main.component.html
@@ -15,7 +15,7 @@
 
         <app-rightpanel></app-rightpanel>
 
-        <app-breadcrumb></app-breadcrumb>
+<!--         <app-breadcrumb></app-breadcrumb> -->
 
         <div class="layout-content">
             <router-outlet></router-outlet>
@@ -23,7 +23,7 @@
 
         <app-footer></app-footer>
 
-        <app-config></app-config>
+<!--         <app-config></app-config> -->
 
         <div class="layout-main-mask"></div>
 
