--- a/src/app/pages/app.register.component.html
+++ b/src/app/pages/app.register.component.html
@@ -10,25 +10,49 @@
                 <p>Complete los datos para su registro</p>
 
                 <form class="forms" [formGroup]="registerForm">
-                    <div class="login-input-wrapper">
-                        <input type="email" formControlName= "email" pInputText id="email" placeholder="Correo / email">
-                        <i class="pi pi-at"></i>
+                    <div fxLayout="row">
+                        <div [ngClass]="{'invalid': email.invalid && (email.dirty || email.touched), 'valid': email.valid}">
+                            <small><span *ngIf="email.hasError('required')" class="text-danger">Este campo es requerido </span></small>
+                            <small><span *ngIf="email.hasError('email')" class="text-danger">Ingrese un email válido </span></small>
+                            <small><span *ngIf="email.hasError('minlength')" class="text-danger">Mínimo 6 caracteres </span></small>
+                            <small><span *ngIf="email.hasError('maxlength')" class="text-danger">Máximo 100 caracteres </span></small>
+                          </div>
+                        <div class="login-input-wrapper">
+                            <input type="email" formControlName = "email" pInputText id="email" placeholder="Correo / email">
+                            <i class="pi pi-at"></i>
+                        </div>
                     </div>
-                    <div class="login-input-wrapper">
-                        <input type="text" formControlName= "name" pInputText id="name" placeholder="Nombres y Apellidos">
-                        <i class="pi pi-user"></i>
+                    <div fxLayout="row">
+                        <div [ngClass]="{'invalid': name.invalid && (name.dirty || name.touched), 'valid': name.valid}">
+                            <small><span *ngIf="name.hasError('required')" class="text-danger">Este campo es requerido </span></small>
+                            <small><span *ngIf="name.hasError('minlength')" class="text-danger">Mínimo 6 caracteres </span></small>
+                            <small><span *ngIf="name.hasError('maxlength')" class="text-danger">Máximo 100 caracteres </span></small>
+                          </div> 
+                        <div class="login-input-wrapper">
+                            <input type="text" formControlName= "name" pInputText id="name" placeholder="Nombres y Apellidos">
+                            <i class="pi pi-user"></i>
+                        </div>
+                    </div>                    
+                    <div fxLayout="row">
+                        <div [ngClass]="{'invalid': usr_empresa.invalid && (usr_empresa.dirty || usr_empresa.touched), 'valid': usr_empresa.valid}">
+                            <small><span *ngIf="usr_empresa.hasError('required')" class="text-danger">Este campo es requerido </span></small>
+                            <small><span *ngIf="usr_empresa.hasError('maxlength')" class="text-danger">Máximo 200 caracteres </span></small>
+                          </div>                         
+                        <div class="login-input-wrapper">
+                            <input type="text" formControlName= "usr_empresa" pInputText id="usr_empresa" placeholder="Empresa">
+                            <i class="pi pi-building"></i>
+                        </div>                  
                     </div>
-                    <div class="login-input-wrapper">
-                        <input type="text" formControlName= "usr_empresa" pInputText id="usr_empresa" placeholder="Empresa">
-                        <i class="pi pi-building"></i>
-                    </div> 
-                    <div class="login-input-wrapper">
-                        <input type="text" formControlName= "usr_cargo" pInputText id="usr_cargo" placeholder="Cargo">
-                        <i class="pi pi-users"></i>
-                    </div>                                                             
-                    <ng-container *ngIf="hasError">
-                            <p class="text-danger">{{hasErrorText}}</p>
-                    </ng-container>
+                    <div fxLayout="row">
+                        <div [ngClass]="{'invalid': usr_cargo.invalid && (usr_cargo.dirty || usr_cargo.touched), 'valid': usr_cargo.valid}">
+                            <small><span *ngIf="usr_cargo.hasError('required')" class="text-danger">Este campo es requerido </span></small>
+                            <small><span *ngIf="usr_cargo.hasError('maxlength')" class="text-danger">Máximo 200 caracteres </span></small>
+                          </div>                         
+                        <div class="login-input-wrapper">
+                            <input type="text" formControlName= "usr_cargo" pInputText id="usr_cargo" placeholder="Cargo">
+                            <i class="pi pi-users"></i>
+                        </div>  
+                    </div>
                     <div class="buttons">
                         <button pButton type="submit" class="btn font-weight-semibold" (click)="submit()" [disabled]="registerForm.invalid">Registrar</button>
                         <a href="#/login" class="secondary-button">Inicia sesión Aquí</a>
@@ -36,7 +60,6 @@
                 </form>                
             </div>
         </div>
-
         <div class="desert"></div>
     </div>
 </div>
