form control chat panel

--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -525,7 +525,7 @@
 
                     </div>
 
-                    <textarea [(ngModel)]="mensaje" id="mensaje" ></textarea>
+                    <textarea class="from-control" [(ngModel)]="mensaje" id="mensaje" ></textarea>
                     <div class="btn btn-primary btn-icon send-icon rounded-circle text-light mb-1" (click)="sendMessageTexto()" role="button">
                         <svg class="hw-24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
