--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -1,17 +1,19 @@
 <div class="grid layout-dashboard">
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-1hidrogeno" >
-            <div class="col-3 overview-box-icon">
-                <img src="assets/layout/images/dashboard/icon-messages.svg" alt="mirage-layout" />
+        <a href="#/pages/agenda">
+            <div class="grid grid-nogutter widget-overview-box overview-box-1hidrogeno" >
+                <div class="col-3 overview-box-icon">
+                    <img src="assets/layout/images/dashboard/icon-messages.svg" alt="mirage-layout" />
+                </div>
+                <div class="col-6 overview-box-text">
+                    <h5>Agenda</h5>
+                    <span>Detalle del evento</span>
+                </div>
+                 <div class="col-3 overview-box-status">
+                    2023
+                </div> 
             </div>
-            <div class="col-6 overview-box-text">
-                <h5>Agenda</h5>
-                <span>24 new since last visit</span>
-            </div>
-            <div class="col-3 overview-box-status">
-                440
-            </div>
-        </div>
+        </a>    
     </div>
     <div class="col-12 xl:col-3 md:col-6">
         <div class="grid grid-nogutter widget-overview-box overview-box-2hidrogeno">
