--- a/src/app/demo/view/agenda.component.html
+++ b/src/app/demo/view/agenda.component.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <div class="card">
             <h5>Dia 1 - Abril 20</h5>
-            <p-table [value]="listaAgenda1" sortMode="single" responsiveLayout="scroll" [scrollable]="true" scrollHeight="400px">
+            <p-table [value]="listaAgenda1" sortMode="single">
 				<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
 					<tr>
 						<td>
@@ -18,7 +18,7 @@
         </div>
         <div class="card">
             <h5>Dia 2 - Abril 21</h5>
-            <p-table [value]="listaAgenda2" sortMode="single" responsiveLayout="scroll" [scrollable]="true" scrollHeight="400px">
+            <p-table [value]="listaAgenda2" sortMode="single" >
 				<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
 					<tr>
                         <td>
