--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -140,7 +140,7 @@
                                             </svg>
                                             Inline SVG -->
                                             <!-- Alternate :: External File link -->
-                                             <img class="injectable" src="non-avatar.png" alt=""> 
+                                             <img class="injectable" src="{{path}}non-avatar.png" alt=""> 
                                         </span>
                                     </div>
                                     <div class="contacts-content">
@@ -542,14 +542,14 @@
             <div class="d-flex flex-column justify-content-center text-center h-100 w-100" *ngIf="!to_user">
                 <div class="container">
                     <div class="avatar avatar-lg mb-2">
-                        <img class="avatar-img" src="./assets/media/avatar/4.png" alt="">
+                        <img class="avatar-img" src="{{path}}{{user.avatar}}" alt="">
                     </div>
 
-                    <h5>Welcome</h5>
-                    <p class="text-muted">Please select a chat to Start messaging.</p>
+                    <h5>Bienvenido {{user.name}}</h5>
+                    <p class="text-muted">Selecciones un participante para iniciar un chat</p>
 
                     <button class="btn btn-outline-primary no-box-shadow" type="button" data-toggle="modal" data-target="#startConversation">
-                        Start a conversation
+                        Iniciar Conversación
                     </button>
                 </div>
             </div>
