--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -30,18 +30,20 @@
         </div>
     </div>
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-3hidrogeno">
-            <div class="col-3 overview-box-icon">
-                <img src="assets/layout/images/dashboard/icon-filessynced.svg" alt="mirage-layout" />
+        <a href="#/pages/participantes">
+            <div class="grid grid-nogutter widget-overview-box overview-box-3hidrogeno">
+                <div class="col-3 overview-box-icon">
+                    <img src="assets/layout/images/dashboard/icon-filessynced.svg" alt="mirage-layout" />
+                </div>
+                <div class="col-6 overview-box-text">
+                    <h5>Participantes</h5>
+                    <span>Speakers</span>
+                </div>
+                <div class="col-3 overview-box-status">
+                    28
+                </div>
             </div>
-            <div class="col-6 overview-box-text">
-                <h5>Speakers</h5>
-                <span>32,56 / 250 GB</span>
-            </div>
-            <div class="col-3 overview-box-status">
-                28
-            </div>
-        </div>
+        </a>
     </div>
     <div class="col-12 xl:col-3 md:col-6">
         <div class="grid grid-nogutter widget-overview-box overview-box-4hidrogeno">
@@ -57,7 +59,6 @@
             </div>
         </div>
     </div>
-
     <div class="col-12 lg:col-12 ">
         <div class="grid flex-column grid-nogutter">
             
@@ -548,7 +549,6 @@
                         Library</div>
                 </div>
             </div>
-
             <div class="store-cards-container">
                 <div class="grid store-cards">
                     <div class="col-6 lg:col-3 md:col-4">
