--- a/src/app/demo/view/agenda.component.html
+++ b/src/app/demo/view/agenda.component.html
@@ -5,7 +5,7 @@
             <p-table [value]="listaAgenda1" sortMode="single">
 				<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
 					<tr>
-						<td>
+						<td  style="width: 15%;">
 							{{agenda.eve_hora}}
 						</td>
 						<td>
@@ -21,7 +21,7 @@
             <p-table [value]="listaAgenda2" sortMode="single" >
 				<ng-template pTemplate="body" let-agenda let-rowIndex="rowIndex">
 					<tr>
-                        <td>
+                        <td  style="width: 15%;">
 							{{agenda.eve_hora}}
 						</td>
 						<td>
@@ -31,6 +31,6 @@
 					</tr>
 				</ng-template>
 			</p-table>          
-        </div>        
+        </div>
     </div>
 </div>
