--- a/src/app/demo/view/participantes.component.html
+++ b/src/app/demo/view/participantes.component.html
@@ -6,7 +6,7 @@
 					<h5>Participantes</h5>
 				</div>
 			</div>									
-			<div class="store-cards-container">
+			<div class="">
 				<div class="grid store-cards">
 					<div class="col-12 lg:col-6 md:col-6">
 						<div class="store-card-content">
@@ -14,11 +14,15 @@
 								<ng-template pTemplate="body" let-persona let-rowIndex="rowIndex">
 									<tr>
 										<td>
-											<div class="avatar avatar-md mr-2"><img src="assets/media/participantes/{{persona.per_foto}}" alt="mirage-layout" /></div>
+											<a style="color: black;" (click)="irAPaginaDestino(persona.per_id)">
+												<div class="avatar avatar-md mr-2"><img src="assets/media/participantes/{{persona.per_foto}}" alt="mirage-layout" /></div>
+											</a>
 										</td>
 										<td>
-											<h5>{{persona.per_nombre}}</h5>
-											<span>{{persona.per_cargo}}</span>	
+											<a style="color: black;" (click)="irAPaginaDestino(persona.per_id)">
+												<h5>{{persona.per_nombre}}</h5>
+												<span>{{persona.per_cargo}}</span>	
+											</a>											
 										</td>
 									</tr>
 								</ng-template>
