--- a/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
+++ b/src/app/modules/chat-panel/chat-panel-body/chat-panel-body.component.html
@@ -614,7 +614,7 @@
                                     <div class="col-12">
                                         <div class="form-group">
                                             <label for="groupName">Nombre del Grupo</label>
-                                            <input type="text" class="form-control form-control-md" id="groupName" [ngModel]="groupName" placeholder="Type group name here">
+                                            <input type="text" class="form-control form-control-md" id="groupName" [(ngModel)]="nombreChatGrupal" placeholder="Type group name here">
                                         </div>
                                     </div>
                                     <div class="col-12">
@@ -659,7 +659,7 @@
                                 
                                 </div>
         
-                                <div class="row hide pt-2" data-step="2" data-title="Add Group Members">
+                                <div class="row hide pt-2" data-step="2" data-title="Agregar participantes">
                                     <div class="col-12 px-0">
                                         <!-- Search Start -->
                                         <form class="form-inline w-100 px-2 pb-2 border-bottom">
