--- a/src/app/app.menu.component.html
+++ b/src/app/app.menu.component.html
@@ -6,9 +6,8 @@
             <i class="pi pi-lock-open" *ngIf="!appMain.staticMenuActive"></i>
         </a>
         <div>
-        <a routerLink="/">
+        <a routerLink="/dash">
             <img alt="logo" src="assets/layout/images/Logo_simplificado_fondo_blanco_40h.png" />
-            
         </a>
     </div>
     </div>
