--- a/src/app/demo/view/participantes.component.html
+++ b/src/app/demo/view/participantes.component.html
@@ -3,7 +3,7 @@
 		<div class="card widget-store-items">
 			<div class="grid grid-nogutter">
 				<div class="col-6 title">
-					<h5>Participantes</h5>
+					<h5>Conferencistas</h5>
 				</div>
 			</div>									
 			<div class="">
