--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -16,48 +16,53 @@
         </a>    
     </div>
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-2hidrogeno">
-            <div class="col-3 overview-box-icon">
-                <img src="assets/layout/images/dashboard/icon-checkins.svg" alt="mirage-layout" />
+        <a href="#/pages/participantes">
+            <div class="grid grid-nogutter widget-overview-box overview-box-2hidrogeno">
+                <div class="col-3 overview-box-icon">
+                    <img src="assets/layout/images/dashboard/icon-checkins.svg" alt="mirage-layout" />
+                </div>
+                <div class="col-6 overview-box-text">
+                    <h5>Conferencistas</h5>
+                    <span>Sperakers</span>
+                </div>
+                <div class="col-3 overview-box-status">
+                    32
+                </div>
             </div>
-            <div class="col-6 overview-box-text">
-                <h5>Asistentes</h5>
-                <span>48 new since last visit</span>
-            </div>
-            <div class="col-3 overview-box-status">
-                532
-            </div>
-        </div>
+        </a>
+
     </div>
     <div class="col-12 xl:col-3 md:col-6">
-        <a href="#/pages/participantes">
+        <a href="#/chat">
             <div class="grid grid-nogutter widget-overview-box overview-box-3hidrogeno">
                 <div class="col-3 overview-box-icon">
                     <img src="assets/layout/images/dashboard/icon-filessynced.svg" alt="mirage-layout" />
                 </div>
                 <div class="col-6 overview-box-text">
-                    <h5>Participantes</h5>
-                    <span>Speakers</span>
+                    <h5>Networking</h5>
+                    <span>Chat con asistentes</span>
                 </div>
                 <div class="col-3 overview-box-status">
-                    28
+                    200
                 </div>
             </div>
         </a>
     </div>
     <div class="col-12 xl:col-3 md:col-6">
-        <div class="grid grid-nogutter widget-overview-box overview-box-4hidrogeno">
-            <div class="col-3 overview-box-icon">
-                <img src="assets/layout/images/dashboard/icon-usersonline.png" alt="mirage-layout" />
+        <a href="#/pages/sponsors">
+            <div class="grid grid-nogutter widget-overview-box overview-box-4hidrogeno">
+                <div class="col-3 overview-box-icon">
+                    <img src="assets/layout/images/dashboard/icon-usersonline.png" alt="mirage-layout" />
+                </div>
+                <div class="col-6 overview-box-text">
+                    <h5>Patrociandores</h5>
+                    <span>Sponsors & Allies</span>
+                </div>
+                <div class="col-3 overview-box-status">
+                    256
+                </div>
             </div>
-            <div class="col-6 overview-box-text">
-                <h5>Networking</h5>
-                <span>72 new user this week</span>
-            </div>
-            <div class="col-3 overview-box-status">
-                256
-            </div>
-        </div>
+        </a>
     </div>
     <div class="col-12 lg:col-12 ">
         <div class="grid flex-column grid-nogutter">
@@ -65,9 +70,9 @@
             <div class="col-12 widget-news">
                 <div class="news-row" [ngStyle]="{'transform': activeNews === 1 ? 'translate3d(0px, 0px, 0px)':activeNews === 2
                 ?'translate3d(-100%, 0px, 0px)':'translate3d(-200%, 0px, 0px)'}">
-                    <div class="card news news-1 active-news">
+<!--                     <div class="card news news-1 active-news">
                         <div class="news-title">
-                            <h5>NEWS</h5>
+                            <h5>Información General</h5>
                         </div>
                         <h6>Segundo Congreso de Hidrógeno Colombia</h6>
                         <p>Este 20 - 21 de Abril de 2023</p>
@@ -77,23 +82,23 @@
                                     class="pi pi-arrow-right"></i></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="card news news-2">
+                    </div> -->
+                    <div class="card news news-2 active-news">
                         <div class="news-title">
-                            <h5>NEWS</h5>
+                            <h5>INFO</h5>
                         </div>
-                        <h6>Scientists are trying to open a portal to a parallel universe</h6>
-                        <p>Does a mysterious mirror world lurk in the shadows of perceived reality? Could 2019
-                            be
-                            the year humans open the first portal to a shadowy dimension which mirrors our own
-                            world?</p>
+                        <h6>Acerca del evento</h6>
+                        <p>El 2°Congreso Internacional de Hidrógeno «Innovación, transición y vida» se llevará a cabo el 20 y 21 de Abril de 2023 en Bogotá. 
+                            Es un evento presencial de 2 días en el que se reunirán los principales actores del hidrógeno en Colombia y América Latina, 
+                            donde se abordarán las principales temáticas del desarrollo del H2 y sus derivados, tales como escenarios de demanda, 
+                            tecnologías de producción, proyectos y pilotos y los distintos marcos políticos y regulatorios pioneros en la región.</p>
                         <div class="grid link">
                             <div class="col-9">
-                                <a href="">Learn more at Independent<i class="pi pi-arrow-right"></i></a>
+                                <a href="https://hidrogenocolombia.com">Website Hidrógeno Colombia<i class="pi pi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="card news news-3">
+<!--                     <div class="card news news-3">
                         <div class="news-title">
                             <h5>NEWS</h5>
                         </div>
@@ -106,13 +111,13 @@
                                 <a href="">Learn more at CNET <i class="pi pi-arrow-right"></i></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="link-points">
                     <div class="grid points">
-                        <div class="col-4 point point-1" [ngClass]="{'active-point': activeNews === 1}" (click)="activeNews = 1"></div>
+<!--                         <div class="col-4 point point-1" [ngClass]="{'active-point': activeNews === 1}" (click)="activeNews = 1"></div> -->
                         <div class="col-4 point point-2 " [ngClass]="{'active-point': activeNews === 2}" (click)="activeNews = 2"></div>
-                        <div class="col-4 point point-3 " [ngClass]="{'active-point': activeNews === 3}" (click)="activeNews = 3"></div>
+<!--                         <div class="col-4 point point-3 " [ngClass]="{'active-point': activeNews === 3}" (click)="activeNews = 3"></div> -->
                     </div>
                 </div>
             </div>
